添加了验证消息窗口(好友验证)

--- a/mainchat.ui
+++ b/mainchat.ui
@@ -177,6 +177,19 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="verifyMsgButton">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>590</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>验证消息</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
